--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap');
       body { 
         font-family: 'Plus Jakarta Sans', sans-serif; 
-        font-size: 16px; /* Increased base font size */
+        font-size: 16px; 
       }
       .vibrant-gradient {
         background: linear-gradient(135deg, #6366f1 0%, #a855f7 100%);
@@ -21,14 +20,54 @@
         backdrop-filter: blur(10px);
       }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
-  }
+</head>
+<body class="bg-indigo-50/50 text-slate-900 min-h-screen">
+    <div id="root">
+        <div class="max-w-md mx-auto p-4">
+            <header class="vibrant-gradient text-white p-8 rounded-3xl shadow-xl mb-6 relative overflow-hidden">
+                <div class="relative z-10">
+                    <div class="flex items-center gap-3 mb-2">
+                        <div class="bg-white/20 p-2 rounded-xl backdrop-blur-md">
+                            <i class="fas fa-shield-halved text-2xl"></i>
+                        </div>
+                        <h1 class="text-3xl font-extrabold tracking-tight">NOAC Guard</h1>
+                    </div>
+                    <p class="text-indigo-100 font-medium tracking-wide text-sm opacity-90 uppercase">Decision Support Tool</p>
+                </div>
+            </header>
+            
+            <div class="bg-white p-6 rounded-3xl shadow-sm border border-indigo-100 mb-6 text-center">
+                <p class="text-slate-500 mb-2">สถานะระบบ</p>
+                <div class="inline-flex items-center px-4 py-2 rounded-full bg-green-100 text-green-700 font-bold">
+                    <i class="fas fa-check-circle mr-2"></i> พร้อมใช้งาน
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 mb-6">
+                <div class="bg-indigo-50 p-4 rounded-2xl border border-indigo-100">
+                    <p class="text-xs text-indigo-400 font-bold uppercase mb-1">CrCl (ml/min)</p>
+                    <p class="text-2xl font-black text-indigo-700">33.06</p>
+                </div>
+                <div class="bg-purple-50 p-4 rounded-2xl border border-purple-100">
+                    <p class="text-xs text-purple-400 font-bold uppercase mb-1">Drug Selected</p>
+                    <p class="text-2xl font-black text-purple-700">Dabigatran</p>
+                </div>
+            </div>
+            
+            <div class="bg-emerald-500 text-white p-8 rounded-3xl shadow-lg shadow-emerald-200 text-center mb-6">
+                 <div class="w-12 h-12 bg-white/20 rounded-full flex items-center justify-center mx-auto mb-4">
+                    <i class="fas fa-check text-2xl"></i>
+                 </div>
+                 <h2 class="text-3xl font-black mb-2">เหมาะสม</h2>
+                 <p class="text-emerald-100 mb-4">ขนาดที่แนะนำ</p>
+                 <div class="bg-white/20 py-3 px-6 rounded-2xl inline-block text-2xl font-bold">
+                    150 mg BID
+                 </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
 }
 </script>
 </head>
